2011-04-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/....: Finally no longer hack "UFlong := int", but rather
	* src/UFconfig/UFconfig.h: use standard CHOLMOD headers

	* DESCRIPTION (Version): 0.9996875-0

2011-03-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-49

2011-03-30  Douglas Bates <bates@stat.wisc.edu>

	* Matrix/src/chm_common.c: [r2658] Install symbols first -
	{preventing seg.fault under -gct}

2011-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-48
	*only* difference to CRAN released *-47, is the work around Sweave bug
	in inst/doc/sparseModels.Rnw.

2011-02-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/factorizations.c (LU_expand): now also works for non-square (m x n)
	* tests/factorizing.R: testing that

2011-02-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (t_geMatrix): drop 'factors', as they can be
	wrong.

2011-02-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (replTmat): fix bug for  M[i,j] <- v,
	when j had duplicated entries.
	* tests/indexing.R (chkAssign): new function; testing the above.

2011-02-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R, R/sparseVector.R, man/sparseVector-class.Rd: now
	require explicitly that i-slot must be sorted for sparseVectors.

2011-02-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (formatSparseM): align="right" accidentally did
	not use zero.print at all.
	print/format sparse Matrix: fix align="right" and improve docu

2011-02-17  Douglas Bates <bates@stat.wisc.edu>

	* DESCRIPTION: Remove Encoding: directive.

2011-02-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/doc/sparseModels.Rnw: use png for large graphics (suggestion from
	  Brian)

2011-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/symmpart.Rd: update, thanks to Spencer Graves' prompting.
