@@ -145,7 +145,7 @@ setMethod("determinant", signature(x = "dsCMatrix", logarithm = "logical"),
 	  function(x, logarithm, ...)
       {
 	  if((n <- x@Dim[1]) <= 1)
-	      return(mkDet(x@x, logarithm))
+	      return(mkDet(diag(x), logarithm))
 	  Chx <- tryCatch(suppressWarnings(Cholesky(x, LDL=TRUE)),
                           error = function(e) NULL)
 	  ## or
