@@ -114,43 +114,6 @@ showProc.time()
 
 ## more sparse Matrices --------------------------------------
 
-m <- 1:800
-set.seed(101) ; m[sample(800, 600)] <- 0
-m0 <- Matrix(m, nrow = 40)
-m1 <- add.simpleDimnames(m0)
-for(m in list(m0,m1)) { ## -- with and without dimnames
-mm <- as(m, "matrix")
-str(mC <- as(m, "dgCMatrix"))
-str(mT <- as(m, "dgTMatrix"))
-stopifnot(identical(mT, as(mC, "dgTMatrix")),
-	  identical(mC, as(mT, "dgCMatrix")),
-	  Qidentical(mC[0,0], new("dgCMatrix")),
-	  Qidentical(mT[0,0], new("dgTMatrix")),
-	  identical(unname(mT[0,]), new("dgTMatrix", Dim = c(0L,20L))),
-	  identical(unname(mT[,0]), new("dgTMatrix", Dim = c(40L,0L))),
-	  identical(mC[0,], as(mT[FALSE,], "dgCMatrix")),
-	  identical(mC[,0], as(mT[,FALSE], "dgCMatrix")),
-	  sapply(c(0:2, 5:10), function(k) {i <- seq_len(k); all(mC[i,i] == mT[i,i])}),
-	  TRUE)
-cat("ok\n")
-show(mC[,1])
-show(mC[1:2,])
-show(mC[7,  drop = FALSE])
-assert.EQ.mat(mC[1:2,], mm[1:2,])
-assert.EQ.mat(mC[0,], mm[0,])
-assert.EQ.mat(mC[,FALSE], mm[,FALSE])
-##
-## *repeated* (aka 'duplicated') indices - did not work at all ...
-i <- rep(8:10,2)
-j <- c(2:4, 4:3)
-assert.EQ.mat(mC[i,], mm[i,])
-assert.EQ.mat(mC[,j], mm[,j])
-## FIXME? assert.EQ.mat(mC[,NA], mm[,NA]) -- mC[,NA] is all 0 "instead" of all NA
-## MM currently thinks we should  NOT  allow  <sparse>[ <NA> ]
-assert.EQ.mat(mC[i, 2:1], mm[i, 2:1])
-assert.EQ.mat(mC[c(4,1,2:1), j], mm[c(4,1,2:1), j])
-assert.EQ.mat(mC[i,j], mm[i,j])
-
 ##' @title Check sparseMatrix sub-assignment   m[i,j] <- v
 ##' @param ms sparse Matrix
 ##' @param mm its [traditional matrix]-equivalent
@@ -174,6 +137,45 @@ chkAssign <- function(ms, mm = as(ms, "matrix"),
     if(!show) { op <- options(error = recover); on.exit(options(op)) }
     assert.EQ.mat(ms, mm, show=show)
 }
+
+m <- 1:800
+set.seed(101) ; m[sample(800, 600)] <- 0
+m0 <- Matrix(m, nrow = 40)
+m1 <- add.simpleDimnames(m0)
+for(m in list(m0,m1)) { ## -- with and without dimnames -------------------------
+mm <- as(m, "matrix")
+str(mC <- as(m, "dgCMatrix"))
+str(mT <- as(m, "dgTMatrix"))
+stopifnot(identical(mT, as(mC, "dgTMatrix")),
+	  identical(mC, as(mT, "dgCMatrix")),
+	  Qidentical(mC[0,0], new("dgCMatrix")),
+	  Qidentical(mT[0,0], new("dgTMatrix")),
+	  identical(unname(mT[0,]), new("dgTMatrix", Dim = c(0L,20L))),
+	  identical(unname(mT[,0]), new("dgTMatrix", Dim = c(40L,0L))),
+	  identical(mC[0,], as(mT[FALSE,], "dgCMatrix")),
+	  identical(mC[,0], as(mT[,FALSE], "dgCMatrix")),
+	  sapply(c(0:2, 5:10),
+                 function(k) {i <- seq_len(k); all(mC[i,i] == mT[i,i])}),
+	  TRUE)
+cat("ok\n")
+show(mC[,1])
+show(mC[1:2,])
+show(mC[7,  drop = FALSE])
+assert.EQ.mat(mC[1:2,], mm[1:2,])
+assert.EQ.mat(mC[0,], mm[0,])
+assert.EQ.mat(mC[,FALSE], mm[,FALSE])
+##
+## *repeated* (aka 'duplicated') indices - did not work at all ...
+i <- rep(8:10,2)
+j <- c(2:4, 4:3)
+assert.EQ.mat(mC[i,], mm[i,])
+assert.EQ.mat(mC[,j], mm[,j])
+## FIXME? assert.EQ.mat(mC[,NA], mm[,NA]) -- mC[,NA] is all 0 "instead" of all NA
+## MM currently thinks we should  NOT  allow  <sparse>[ <NA> ]
+assert.EQ.mat(mC[i, 2:1], mm[i, 2:1])
+assert.EQ.mat(mC[c(4,1,2:1), j], mm[c(4,1,2:1), j])
+assert.EQ.mat(mC[i,j], mm[i,j])
+
 set.seed(7)
 cat(" for(): ")
 for(n in 1:50) {
@@ -182,7 +184,7 @@ for(n in 1:50) {
     cat(".")
 }
 cat("ok\n----\n")
-}## end{for}
+}## end{for}---------------------------------------------------------------
 showProc.time()
 
 ##---- Symmetric indexing of symmetric Matrix ----------
